--- a/front-end/dashboard/src/app/app.component.html
+++ b/front-end/dashboard/src/app/app.component.html
@@ -1,7 +1,13 @@
-<div class="flex-1 flex flex-col">
+<div class="flex flex-col h-screen bg-gray-50">
     <app-header></app-header>
-    <app-sidebar></app-sidebar>
-    <main class="flex-1 p-6">
-        <router-outlet></router-outlet>
-    </main>
+    <div class="flex flex-1 overflow-hidden">
+        <aside class="hidden md:block md:w-64 bg-white border-r border-gray-200 overflow-auto">
+            <app-sidebar></app-sidebar>
+        </aside>
+        <main class="flex-1 overflow-auto">
+            <div class="max-w-7xl mx-auto p-4 md:p-6">
+                <router-outlet></router-outlet>
+            </div>
+        </main>
+    </div>
 </div>
